eagle_test/error/inheritance_error.eagle
class A extends A {
}
// expected: [Error at line 1] At 'A': Class can't inherit from itself